# FrontierWarden

./: .gitignore  .vercelignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile.gas-station  LICENSE  Move.toml  PROJECT_STATUS_REPORT.md  PROOF_LOG.md  Pub.devnet.toml  Pub.local.toml  Published.toml  README.md  SECURITY.md  codewarden.json  package-lock.json  package.json  research.pem
.github/: PULL_REQUEST_TEMPLATE.md
DevDocs/: eve_frontier_edge_out_efmap.md  eve_frontier_indexer_architecture.md  eve_frontier_reputation_executive_briefing.md  eve_frontier_reputation_part2_cryptoeconomics.md  eve_frontier_reputation_production_spec.md  eve_frontier_reputation_v3_final.md  eve_frontier_reputation_v4_final.md  eve_frontier_tribal_intelligence_layer.md
Documents/: ADR_DATA_AGGREGATION_RISK.md  ADR_GATE_POLICY_WORLD_GATE_BINDING.md  ADR_KILLMAILS_AS_TRUST_EVIDENCE.md  ADR_PRIVATE_TENANT_DATA_ENCRYPTION.md  ADR_VERIFIABLE_PROVENANCE_LAYER.md  ADR_ZKLOGIN_SESSION_AUTH.md  API_WEAPONIZATION_AUDIT.md  DAPP_DISCOVERY_REPORT.md  (+63 more)
indexer/: Cargo.toml  Dockerfile  Procfile  config.example.toml  config.prod.toml  config.toml.example  indexer.err  run.err
indexer/backups/: core_tables_2026-05-19.json
indexer/migrations/: 0001_efrep.sql  0002_efrep_indexes.sql  0003_efrep_partitions.sql  0004_gate_challenge_projections.sql  0005_fix_view_security.sql  0006_revoke_public_access.sql  0007_toll_withdrawals.sql  0008_lock_public_data_api.sql  0009_raw_event_dedup.sql  0010_eve_world_data.sql  0011_eve_identity_status.sql  0012_eve_identity_character_fields.sql  0013_world_gates.sql  0014_trust_api_indexes.sql  0015_world_gate_extensions.sql  0016_identity_enrichment.sql  0017_gate_policy_world_bindings.sql  0018_world_gate_links.sql  0019_world_gate_jumps.sql  0020_widen_cursor_key.sql  0021_world_kill_mails.sql
indexer/scripts/: verify-personal-message.mjs
indexer/src/: api.rs  api_attestations.rs  api_auth.rs  api_challenges.rs  api_common.rs  api_eve.rs  api_gate_ops.rs  api_gates.rs  api_health.rs  api_kill_mails.rs  api_rate_limit.rs  api_registry.rs  api_reputation.rs  api_request_log.rs  api_sessions.rs  api_trust.rs  api_world_gate_traffic.rs  api_world_gates.rs  config.rs  db.rs  eve_identity.rs  event_source.rs  gate_binding_status_api_tests.rs  gate_policy_bindings.rs  gate_policy_bindings_tests.rs  graphql_event_client.rs  health_freshness_api_tests.rs  ingester.rs  kill_mail_poller.rs  lib.rs  main.rs  rpc.rs  trust_api_http_tests.rs  trust_db.rs  trust_eval_gate.rs  trust_eval_score.rs  trust_evaluator.rs  trust_evaluator_tests.rs  trust_freshness.rs  trust_response.rs  (+14 more)
indexer/src/api_kill_mails/: handlers.rs  mod.rs  types.rs
indexer/src/api_sessions/: crypto.rs  mod.rs  service.rs  tests.rs  types.rs  verify.rs
indexer/src/eve_identity/: client.rs  db.rs  enrichment.rs  graphql_types.rs  mod.rs  parser.rs  probe.rs  resolver.rs  types.rs
indexer/src/graphql_events/: mod.rs  tests.rs
indexer/src/ingester/: cursors.rs  mod.rs  tests.rs
indexer/src/processor/: attestation.rs  fraud_challenge.rs  lending.rs  mod.rs  oracle_registry.rs  profile.rs  raw.rs  reputation_gate.rs  schema_registry.rs  singleton.rs  system_sdk.rs  vouch.rs  world_jump.rs  world_topology.rs
indexer/src/shadow_event_source/: mod.rs  tests.rs
indexer/src/trust_api_http_tests/: mod.rs  seed.rs
indexer/src/world_api/: mod.rs  tests.rs  types.rs
(+323 files in other folders)
