[package]
name    = "efrep-indexer"
version = "0.1.0"
edition = "2021"
description = "Event indexer for the EVE Frontier Reputation Protocol on Sui testnet"
default-run = "efrep-indexer"

[[bin]]
name = "efrep-indexer"
path = "src/main.rs"

[[bin]]
name = "sync_eve_world"
path = "src/bin/sync_eve_world.rs"

[[bin]]
name = "run_migration"
path = "src/bin/run_migration.rs"

[lib]
name = "efrep_indexer"
path = "src/lib.rs"

[dependencies]
# Sui RPC via JSON-RPC over HTTP — no git dep, fast compile, stable API
reqwest = { version = "0.12", features = ["json"] }

# PostgreSQL — runtime-tokio (no TLS needed for local dev)
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "json", "tls-native-tls"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

# Config loading (TOML)
toml = "0.8"

# Structured logging
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# HTTP API server
axum = "0.8"

# Ergonomic error handling
anyhow = "1"
base64 = "0.22"
blake2 = "0.10"
ed25519-dalek = { version = "2", features = ["rand_core"] }
hex = "0.4"
rand = "0.8"
chrono = "0.4"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
